--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -2,20 +2,20 @@
   position: fixed;
   background-color: black;
   width: 20%;
-  min-height: 90vh;
-  margin-top: calc((100vh - 90vh) / 2);
+  height: 100%;
   color: white;
   transition: width 0.5s ease-in-out;
+  margin-top: 0;
 }
 
 .side_bar_expanded {
   position: fixed;
   background-color: black;
   width: 40%;
-  min-height: 90vh;
-  margin-top: calc((100vh - 90vh) / 2);
+  height: 100%;
   color: white;
   transition: width 0.5s ease-in-out;
+  margin-top: 0;
 }
 
 .expand_button {
