--- a/src/components/side/Sidebar.module.css
+++ b/src/components/side/Sidebar.module.css
@@ -18,9 +18,13 @@
   margin-top: 0;
 }
 
+.new_chat_button_container {
+  width: 100%;
+  height: 40px;
+}
+
 .expand_button {
   position: absolute;
   top: 0;
   right: 0;
-  margin-top: 0;
 }
