--- a/src/components/side/Sidebar.module.css
+++ b/src/components/side/Sidebar.module.css
@@ -8,14 +8,15 @@
   margin-top: 0;
 }
 
-.side_bar_expanded {
+.side_bar_closed {
   position: fixed;
   background-color: black;
-  width: 40%;
+  width: 0%;
   height: 100%;
   color: white;
   transition: width 0.5s ease-in-out;
   margin-top: 0;
+  display: inline-block;
 }
 
 .new_chat_button_container {
@@ -27,4 +28,13 @@
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.expand_button2 {
+  position: fixed;
+  display: inline-block;
+}
+
+.expand_button2_hide {
+  display: none;
 }
