--- a/src/components/left-side/Sidebar.module.css
+++ b/src/components/left-side/Sidebar.module.css
@@ -22,6 +22,7 @@
 .new_chat_button_container {
   width: 100%;
   height: 40px;
+  margin-top: 3px;
 }
 
 .expand_button {
@@ -33,6 +34,7 @@
 .expand_button2 {
   position: fixed;
   display: inline-block;
+  z-index: 5;
 }
 
 .expand_button2_hide {
