[최보근] 디자인 변경, tailwind css 적용, 파일업로드 구현, app상태변수적용

--- a/src/components/top-side/Header.module.css
+++ b/src/components/top-side/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  width: 80%;
+  width: 100%;
   height: 10%;
   display: block;
   z-index: 6;
@@ -22,8 +22,10 @@
 }
 
 .tmp {
+  display: inline;
   text-align: center;
 }
+
 .expand_button2 {
   position: fixed;
   display: inline-block;
