--- a/src/components/left-side/Sidebar.module.css
+++ b/src/components/left-side/Sidebar.module.css
@@ -1,11 +1,12 @@
 .side_bar {
   position: fixed;
-  background-color: black;
+  background-color: gray;
   width: 20%;
-  height: 100%;
+  height: 90%;
   color: white;
   transition: width 0.5s ease-in-out;
   margin-top: 0;
+  bottom: 0;
 }
 
 .side_bar_closed {
